<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_baseline_newspaper_24"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_headlines"
            android:icon="@drawable/ic_baseline_category_24"
            android:title="@string/menu_headline_categories" />
    </group>

    <group android:id="@+id/menu_bottom">
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_baseline_bookmark_border_24"
            android:title="@string/menu_favorites" />
    </group>
</menu>